# dock

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  populate_people.py  pyproject.toml  readme.md  setup.cfg
alembic/: env.py
alembic/versions/: e05e9288d4ac_create_people_accounts_transactions.py
desafio/: config.py  logger.py
desafio/clients/: orm.py
desafio/domain/controllers/: accounts.py  transactions.py
desafio/domain/controllers/schemas/: accounts.py  transactions.py
desafio/domain/exceptions/: accounts.py  transactions.py
desafio/domain/interactors/: __init__.py  _entities.py  accounts.py  transactions.py
desafio/domain/repositories/: __init__.py  accounts.py  decorators.py  people.py  transactions.py
desafio/domain/repositories/_models/: __init__.py  _mixins.py  accounts.py  exceptions.py  transactions.py
desafio/domain/use_cases/: accounts.py  transactions.py
desafio/domain/use_cases/schemas/: transactions.py
desafio/entrypoints/: populate_people.py
desafio/entrypoints/fastapi/: accounts.py  health_check.py  main.py  transactions.py
tests/: Desafio.postman_collection.json
tests/domain/: conftest.py
tests/domain/controllers/accounts/: test_create.py  test_detail.py  test_update.py
tests/domain/controllers/transactions/: test_create_transaction.py  test_list_transactions.py
tests/domain/use_cases/accounts/: test_create.py  test_detail.py  test_update.py
tests/domain/use_cases/transactions/: test_create_transaction.py  test_list_transactions.py
(+6 files in other folders)
