[tool.poetry]
name = "desafio-dev-api-rest"
version = "0.1.0"
description = ""
authors = ["Shinkenuu <shinkenuu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.64.0"
sqlalchemy = "^1.4.14"
alembic = "^1.6.2"
uvicorn = "^0.13.4"
pycpfcnpj = "^1.5.1"
psycopg2-binary = "^2.8.6"
freezegun = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^21.5b0"
mypy = "^0.812"
flake8 = "^3.9.1"
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
freezegun = "^1.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
